Fix problem with horizontal scroll on all pages

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -34,7 +34,7 @@ h1, h2, h3, h4 {
 header {
     z-index: 100;
     height: 100px;
-    width: 100vw;
+    width: 100%;
     display: flex;
     justify-content: space-between;
 }
@@ -77,7 +77,7 @@ footer {
     color: #000000;
     display: flex;
     justify-content: center;
-    width: 100vw;
+    width: 100%;
 }
 
 /* Hamburger menu to display links */
@@ -100,7 +100,7 @@ footer {
 /* Main section - index.html */
 
 #homepage {
-    width: 100vw;
+    width: 100%;
     background-color: #aaaaaa;
     display: flex;
     flex-direction: column;
